--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DialogDemoActivity" />
+        <activity android:name=".models.DialogDemoActivity" />
         <activity android:name=".MovieDetailsActivity"></activity>
     </application>
 
